[package]
name = "michael"
version = "0.1.0"
authors = ["Rintaro Itokawa <me@re-taro.dev>"]
categories = ["proxy-manager"]
edition = "2021"
keywords = ["cli", "proxy", "proxy-manager"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/re-taro/michael"
rust-version = "1.68"
description = """
Simple and customizable proxy manager.
"""

[dependencies]

[profile.release]
codegen-units = 1
lto = true
strip = true

[[bin]]
name = "michael"
path = "src/main.rs"
